opam-version: "2.0"
maintainer: "Nathan Rebours <nathan.p.rebours@gmail.com>"
author: "Nathan Rebours <nathan.p.rebours@gmail.com>"
homepage: "https://github.com/Leonidas-from-XIV/dune-release-testing"
bug-reports: "https://github.com/Leonidas-from-XIV/dune-release-testing/issues"
license: "ISC"
dev-repo: "git+https://github.com/Leonidas-from-XIV/dune-release-testing.git"
doc: "https://leonidas-from-xiv.github.io/dune-release-testing"
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
run-test: [
  [ "dune" "runtest" "-p" name "-j" jobs ]
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.04.2"}
]
synopsis: "Some dummy package"
description: """
Test package please ignore
"""
